--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "./.devcontainer/macaulay2-codespace-0.0.4.vsix"
+        "intisar.macaulay2-codespace"
       ]
     }
   },
