Added user setting override command in devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,12 +2,17 @@
   "name": "Macaulay2 Codespace",
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
   "postCreateCommand": "bash .devcontainer/setup.sh",
+  "remoteUser": "vscode",
   "customizations": {
     "vscode": {
       "extensions": [
         "intisar.macaulay2-codespace"
-      ]
+      ],
+      "settings": {
+        "files.exclude": {
+          "**/.vscode": false
+        }
+      }
     }
-  },
-  "remoteUser": "vscode"
+  }
 }
