--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,12 +2,12 @@
   "name": "Macaulay2 Codespace",
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
   "postCreateCommand": "bash .devcontainer/setup.sh",
-  "remoteUser": "vscode",
   "customizations": {
     "vscode": {
       "extensions": [
         "intisar.macaulay2-codespace"
       ]
     }
-  }
+  },
+  "remoteUser": "vscode"
 }
